--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,14 +18,20 @@
   --animate-float-delayed: float 3s ease-in-out 1s infinite;
 
   @keyframes float {
-
     0%,
     100% {
       transform: translateY(0);
     }
-
     50% {
       transform: translateY(-20px);
+    }
+  }
+
+  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
     }
   }
 }
